<resources>

    <string name="app_name">NavigationResultSample</string>

    <string name="general_login_text">Login</string>
    <string name="general_register_text">Register</string>
    <string name="general_username_text">Username</string>
    <string name="general_password_text">Password</string>
    <string name="general_or_text">or</string>
    <string name="general_change_name_text">Change Name</string>
    <string name="general_ok_text">OK</string>
    <string name="general_cancel_text">Cancel</string>
    <string name="general_triple_text">Triple</string>

    <string name="general_login_success_message">You have logged in</string>
    <string name="general_register_success_message">You have registered successfully</string>
    <string name="general_wrong_login_credentials_message">Username or Password is wrong!</string>
    <string name="general_name_change_success_message">You have successfully changed your name to %s</string>

</resources>
