<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/usernameInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/general_username_text" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/passwordInput"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:hint="@string/general_password_text"
        android:inputType="numberPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/general_login_text" />

</LinearLayout>
